# gfal2-xrootd

./: CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README  RELEASE-NOTES  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/modules/: FindXROOTD.cmake
packaging/rpm/specs/: gfal2-plugin-xrootd.spec
src/: CMakeLists.txt  Makefile.am  Makefile.in  gfal_xrootd_plugin_3rd_copy.cpp  gfal_xrootd_plugin_interface.cpp  gfal_xrootd_plugin_interface.h  gfal_xrootd_plugin_main.cpp  gfal_xrootd_plugin_main.h  gfal_xrootd_plugin_utils.cpp  gfal_xrootd_plugin_utils.h
src/tests/: CMakeLists.txt  sanitize.cpp
